$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-0 (opened September 8, 2011)

	* New major version opened with the release of vegan_2.0-0 on
	September 8, 2011.

	* permatswap: there was a bug in internal C routine, and therefore
	not all permissible swaps were performed. Based on limited
	analysis, the effects of this bug seem to be negligible.  It is,
	however, recommended to re-run all analyses. The C code was made
	faster by getting quickly out from isDiag* if there are only 0 or
	1 filled items, because there is nothing to swap. Tests show that
	the C code indeed is ca 10% faster in permatswap(BCI,
	method="swa", thin=1000, times=999), but only a 20-25% of time was
	spent in C, and the new permatswap/permatswap1 spends 2.2x longer
	in other parts. With faster C code the net slowdown is 1.7x.

	* permatfull, permatswap summary: huge speed-up. Running
	example(permatfull) was by far the slowest part of R CMD check: it
	took more than 21% of the example checking time. Especially
	plot.permat() and as.ts.permat() were extremely slow. I traced
	this to summary.permat, and there in calculating Bray-Curtis
	dissimilarities. Here the original data x$orig was a data.frame,
	and changing this to matrix made a huge difference. Here timings
	in my MacBook Air 1.6 GHz:

	> system.time(bray <- sapply(x$perm, function(z) 
	      sum(abs(x$orig - z)) / sum(x$orig + z)))
        user  system elapsed 
        3.609   0.046   3.662 
        Change x$orig to a matrix:
        > system.time(bray <- sapply(x$perm, function(z) 
	        sum(abs(x$orig - z)) / sum(x$orig + z)))
        user  system elapsed 
        0.007   0.000   0.007

	After changing x$orig to matrix in summary.permat, the
	example(permutest) used only 5% of total example checking time,
	the whole vegan example checking time was reduced by 13%, and
	permatfull checks run 4.5x faster.

	* New functions: permatfull1 and permatswap1. Both functions